modular tests: fix for modularized junit 5 (IDEA-171419)
GitOrigin-RevId: e24086449df4b545c0388f50155d7dcce17aba1a